--- a/GnuGPG.wiki
+++ b/GnuGPG.wiki
@@ -6,7 +6,7 @@ Les clés sont stockées dans le répertoire ~/.gnugpg
 
 - `gpg --list-keys` Lister les clés présentes
 - `gpg --full-gen-key` Pour créer une cléc
-- `gpg --edit-key {ID de la clé}` Pour éditer la clé dans l'id peut être l'UID complet, l'adress mail, l'ID chiffré
+- `gpg --edit-key {ID de la clé}` Pour éditer la clé dont l'id peut être l'UID complet, l'adress mail, l'ID chiffré
 
 === en mode console ===
 
