--- a/Mutt.wiki
+++ b/Mutt.wiki
@@ -58,9 +58,10 @@ _Move mail in a folder_
 # `;s` to move messages
 
 
-_Attach files_ 
-press "a" and for multiple file at once use "t" to tag the files you want 
-pree "enter" to add files
+_Attach files_
+press "a" and for multiple file at once use "t" to tag the files you want
+press "enter" to add files
+press "D" to delete attached file
 
 == Tips ==
 
